--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cryptopals challenge done in java",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./SET4/Challenge31/Backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/AdityaP1502/cryptopals-challenge-java#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
